--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "electron-log": "^5.4.3",
     "electron-squirrel-startup": "^1.0.1",
     "vue": "^3.5.22",
-    "vue-router": "^4.5.1",
+    "vue-router": "^4.5.1"
+  },
+  "repository": {
     "type": "git",
     "url": "https://github.com/LoucasTougeron/electronJSDemo"
   }
